# gym-workout-generator

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: test.yml
backend/: exercises.py  main.py  models.py  test_api.py  workout_logic.py
frontend/: manifest.json
frontend/static/css/: style.css
frontend/static/js/: app.js  sw.js
frontend/templates/: index.html
tests/: conftest.py  test_frontend.py
