[project]
name = "gym-workout-generator"
version = "1.0.0"
description = "Random gym workout generator PWA with Python FastAPI backend"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]
